--- a/MinecraftPurpleTheme.css
+++ b/MinecraftPurpleTheme.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("https://angelillo15.es/resources/img/background.png");
+  background-image: url("https://telegra.ph/file/1fb4481207ec68af81d5a.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
@@ -154,7 +154,7 @@ div.TitledGreyBox___StyledDiv-sc-gvsoy-0.oLbNP.StartupContainer___StyledTitledGr
 }
 
 div.App___StyledDiv-sc-2l91w7-0.fnfeQw {
-  background-image: url("https://angelillo15.es/resources/img/background.png");
+  background-image: url("https://telegra.ph/file/1fb4481207ec68af81d5a.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
